fixed the overflow of the pink background by using box-sizing: border-box on the .btn-flat-long class.

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -45,7 +45,7 @@
   background-color: transparent;
   border: none;
   transition: all 0.2s ease-in-out;
-
+  box-sizing: border-box;
 
   &:hover {
     background-color: #FFB9FC;
